<resources>
    <string name="app_name">你听我说</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="phone">请输入手机号，默认以+86开头</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱或手机格式错误</string>
    <string name="error_invalid_password">密码必须为8-16位且包含大小写字母</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写帐号</string>
    <string name="permission_rationale" translatable="true">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_name_login">Listen To Me</string>
    <string name="listen_to_me_icon">ListenToMeIcon</string>
    <string name="bottom_nav_listen">听力</string>
    <string name="bottom_nav_speech">口语</string>
    <string name="bottom_nav_social">社区</string>
    <string name="bottom_nav_profile">我的</string>
    <string name="listen_toobar_title">听力频道</string>
    <string name="speech_toobar_title">口语天地</string>
    <string name="social_toobar_title">我的社区</string>
    <string name="profile_toobar_title">个人中心</string>
    <string name="action_settings">设置</string>
    <string name="developers">团队人猿名单</string>
    <string name="title_activity_listen_collection">我的听力</string>
    <string name="ID_register">帐号注册</string>
    <string name="input_password">请输入密码</string>
    <string name="verify_code">请输入验证码</string>
    <string name="send_verifycode">发送验证码</string>
    <string name="repassword">再次输入密码</string>
    <string name="rememberpwd">记住密码</string>
    <string name="easy">基础</string>
    <string name="more"><![CDATA[更多>]]></string>
    <string name="middle">中级</string>
    <string name="high">高级</string>
    <string name="listen_analysis">答案解析：</string>
    <string name="right_answer">正确答案：</string>
    <string name="your_answer">您的选择：</string>
</resources>
