<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <TextView android:id="@+id/tv_question"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textIsSelectable="true"
              android:textSize="16sp"
    />
    <TextView android:id="@+id/tv_choose"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/tv_question"
              android:textIsSelectable="true"
              android:text="@string/your_answer"
              android:textSize="16sp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_my_answer"
              android:layout_toRightOf="@id/tv_choose"
              android:layout_below="@id/tv_question"
              android:text="A"
              android:textColor="@color/red"
              android:textSize="16sp"/>
    <TextView android:id="@+id/tv_right_answer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/tv_choose"
              android:text="@string/right_answer"
              android:textSize="16sp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="A"
              android:id="@+id/tv_listen_right_answer"
              android:layout_below="@id/tv_my_answer"
              android:textColor="?attr/colorPrimary"
              android:textSize="16sp"
              android:layout_toRightOf="@+id/tv_choose"
              android:layout_toEndOf="@+id/tv_choose"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tv_analysis"
              android:layout_below="@id/tv_right_answer"
              android:text="@string/listen_analysis"
              android:textSize="16sp"
    />
</RelativeLayout>